tweak GRADLE_OPTS